# hassio-addons

./: .gitmodules  README.md  repository.yaml
.github/workflows/: builder.yaml
addon-ble2mqtt/: .gitignore  DOCS.md  Dockerfile  README.md  ble2mqtt.json.example  build.yaml  config.json  config.yaml  docker-compose.test.yml  docker_entrypoint.sh  docker_entrypoint_standalone.sh
addon-ble2mqtt/calibrate-wp6003/: calibrate.py  main.py  pyproject.toml
addon-ble2mqtt/rootfs/etc/init.d/: bluetooth
filament_calibrator/: .dockerignore  .gitignore  CHANGELOG.md  DOCS.md  Dockerfile  README.md  build.yaml  config.yaml  pyproject.toml  run.sh
filament_calibrator/app/: __init__.py  calc.py  content.py  main.py  models.py  spoolman.py
filament_calibrator/app/static/: style.css
filament_calibrator/app/storage/: __init__.py  base.py  local.py
filament_calibrator/app/templates/: base.html  filament.html  index.html
filament_calibrator/content/: SCHEMA.md
filament_calibrator/content/materials/: petg.yaml  pla.yaml  tpu90a.yaml
filament_calibrator/tests/: conftest.py  test_addon.py  test_api.py  test_calc.py  test_content.py  test_spoolman.py
